[project]
name = "dagster_flux"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "FluxFury", email = "flux@fluxfury.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "webnews-parser",
    "httptools>=0.5.0",
    "dagster>=1.9.6,<2",
    "dagster-cloud>=1.9.6,<2",
    "uvicorn>=0.24.0",
    "dagster-postgres>=0.26.8,<0.27",
    "langchain-openai>=0.3.12,<0.4",
    "aiokafka>=0.12.0,<0.13",
    "flux-orm",
    "kafka-python>=2.2.4",
    "langchain>=0.3.25",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "dagster-webserver>=1.9.6,<2",
]

[tool.uv]

[tool.uv.sources]
webnews-parser = { git = "ssh://git@github.com/FluxFury/webnews-parser.git", branch = "master" }
flux-orm = { git = "ssh://git@github.com/FluxFury/flux-orm.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "dagster_flux.definitions"
project_name = "dagster_flux"

[tool.setuptools.packages.find]
exclude=["dagster_flux_tests"]
